// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`function returns constant > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "lineNumber": 1,
  },
  {
    "arguments": [],
    "instruction": "loop",
    "lineNumber": 3,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 4,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "getFortyTwo",
      },
    ],
    "instruction": "call",
    "lineNumber": 5,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 6,
  },
  {
    "arguments": [],
    "instruction": "loopEnd",
    "lineNumber": 7,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 9,
  },
]
`;

exports[`function returns constant > if the generated AST, WAT and memory map match the snapshot 2`] = `""`;

exports[`function returns constant > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "__loopErrorSignaler": {
    "byteAddress": 8,
    "default": -1,
    "elementWordSize": 4,
    "id": "__loopErrorSignaler",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 2,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;

exports[`function with parameter > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "int",
    "lineNumber": 1,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "lineNumber": 2,
  },
  {
    "arguments": [],
    "instruction": "loop",
    "lineNumber": 4,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 5,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "push",
    "lineNumber": 6,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "double",
      },
    ],
    "instruction": "call",
    "lineNumber": 7,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 8,
  },
  {
    "arguments": [],
    "instruction": "loopEnd",
    "lineNumber": 9,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 11,
  },
]
`;

exports[`function with parameter > if the generated AST, WAT and memory map match the snapshot 2`] = `""`;

exports[`function with parameter > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "__loopErrorSignaler": {
    "byteAddress": 12,
    "default": -1,
    "elementWordSize": 4,
    "id": "__loopErrorSignaler",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 3,
    "wordAlignedSize": 1,
  },
  "input": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "input",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 8,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 2,
    "wordAlignedSize": 1,
  },
}
`;

exports[`function with two parameters > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input1",
      },
    ],
    "instruction": "int",
    "lineNumber": 1,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input2",
      },
    ],
    "instruction": "int",
    "lineNumber": 2,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "lineNumber": 3,
  },
  {
    "arguments": [],
    "instruction": "loop",
    "lineNumber": 5,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 6,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input1",
      },
    ],
    "instruction": "push",
    "lineNumber": 7,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input2",
      },
    ],
    "instruction": "push",
    "lineNumber": 8,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "add",
      },
    ],
    "instruction": "call",
    "lineNumber": 9,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 10,
  },
  {
    "arguments": [],
    "instruction": "loopEnd",
    "lineNumber": 11,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 13,
  },
]
`;

exports[`function with two parameters > if the generated AST, WAT and memory map match the snapshot 2`] = `""`;

exports[`function with two parameters > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "__loopErrorSignaler": {
    "byteAddress": 16,
    "default": -1,
    "elementWordSize": 4,
    "id": "__loopErrorSignaler",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 4,
    "wordAlignedSize": 1,
  },
  "input1": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "input1",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
  "input2": {
    "byteAddress": 8,
    "default": 0,
    "elementWordSize": 4,
    "id": "input2",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 2,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 12,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 3,
    "wordAlignedSize": 1,
  },
}
`;
